// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DateTimePicker DateTimePicker date-all demo works fine 1`] = `
<date-all>
  <t-cell
    arrow="{{true}}"
    data-mode="datetime"
    hover="{{true}}"
    note=""
    tClass="panel-item"
    title="选择日期时间"
    bind:tap="showPicker"
  />
  <t-date-time-picker
    format="YYYY-MM-DD HH:mm:ss"
    mode="second"
    title="选择日期和时间"
    value="{{1640217600000}}"
    visible="{{false}}"
    bind:cancel="hidePicker"
    bind:change="onConfirm"
    bind:pick="onColumnChange"
  />
</date-all>
`;

exports[`DateTimePicker DateTimePicker steps demo works fine 1`] = `
<steps>
  <t-cell
    arrow="{{true}}"
    hover="{{true}}"
    note=""
    tClass="panel-item"
    title="选择时间"
    bind:tap="showPicker"
  />
  <t-date-time-picker
    format="HH:mm:ss"
    mode="{{
      Array [
        "null",
        "second",
      ]
    }}"
    steps="{{
      Object {
        "minute": 5,
      }
    }}"
    title="选择时间"
    value="10:00:00"
    visible="{{false}}"
    bind:cancel="hidePicker"
    bind:change="onConfirm"
    bind:pick="onColumnChange"
  />
</steps>
`;

exports[`DateTimePicker DateTimePicker time demo works fine 1`] = `
<time>
  <wx-view
    class="demo-desc"
  >
    时分秒选择器
  </wx-view>
  <t-cell
    arrow="{{true}}"
    data-mode="second"
    hover="{{true}}"
    note=""
    tClass="panel-item"
    title="选择时间"
    bind:tap="showPicker"
  />
  <wx-view
    class="demo-desc"
  >
    时分选择器
  </wx-view>
  <t-cell
    arrow="{{true}}"
    data-mode="minute"
    hover="{{true}}"
    note=""
    tClass="panel-item"
    title="选择时间"
    bind:tap="showPicker"
  />
  <t-date-time-picker
    format="HH:mm:ss"
    mode="{{
      Array [
        "null",
        "second",
      ]
    }}"
    title="选择时间"
    value="10:00:00"
    visible=""
    bind:cancel="hidePicker"
    bind:change="onConfirm"
    bind:pick="onColumnChange"
  />
  <t-date-time-picker
    format="HH:mm"
    mode="{{
      Array [
        "null",
        "minute",
      ]
    }}"
    title="选择时间"
    value="23:59"
    visible=""
    bind:cancel="hidePicker"
    bind:change="onConfirm"
    bind:pick="onColumnChange"
  />
</time>
`;

exports[`DateTimePicker DateTimePicker without-popup demo works fine 1`] = `
<without-popup>
  <t-date-time-picker
    defaultValue="{{1640217600000}}"
    end="2030-09-09 12:12:12"
    format="YYYY-MM-DD"
    mode="date"
    start="2000-01-01 00:00:00"
    title="选择日期"
    usePopup="{{false}}"
    visible="{{false}}"
    bind:cancel="hidePicker"
    bind:change="onConfirm"
    bind:pick="onColumnChange"
  />
</without-popup>
`;

exports[`DateTimePicker DateTimePicker year-month demo works fine 1`] = `
<year-month>
  <t-cell
    arrow="{{true}}"
    data-mode="month"
    hover="{{true}}"
    note=""
    tClass="panel-item"
    title="选择日期"
    bind:tap="showPicker"
  />
  <t-date-time-picker
    end="2030-09-09 12:12:12"
    format="YYYY-MM"
    mode="month"
    start="2000-01-01 00:00:00"
    title="选择日期"
    value="2021-09"
    visible="{{false}}"
    bind:cancel="hidePicker"
    bind:change="onConfirm"
    bind:pick="onColumnChange"
  />
</year-month>
`;

exports[`DateTimePicker DateTimePicker year-month-date demo works fine 1`] = `
<year-month-date>
  <t-cell
    arrow="{{true}}"
    class="test"
    data-mode="date"
    hover="{{true}}"
    note=""
    tClass="panel-item"
    title="选择日期"
    bind:tap="showPicker"
  />
  <t-date-time-picker
    defaultValue="{{1640217600000}}"
    end="2030-09-09 12:12:12"
    format="YYYY-MM-DD"
    mode="date"
    start="2000-01-01 00:00:00"
    title="选择日期"
    visible="{{false}}"
    bind:cancel="hidePicker"
    bind:change="onConfirm"
    bind:pick="onColumnChange"
  />
</year-month-date>
`;
